--- a/src/components/common/aq-backtest-metric-item.html
+++ b/src/components/common/aq-backtest-metric-item.html
@@ -16,7 +16,7 @@
 		paper-card{
 			width:100%;
 			border-top: 2px solid #cf6766;
-			color:#333a56;
+			color:#24293d;
 		}
 
 		#metric {
@@ -26,7 +26,7 @@
 
 		#metric-value {
 			font-size: var(--font-size-metric-value, 20px);
-			color: #333a56;
+			color: #24293d;
 			font-weight: bold;
 		}
 
