--- a/src/components/analyze/aq-analyze-home-backtest-item2.html
+++ b/src/components/analyze/aq-analyze-home-backtest-item2.html
@@ -17,7 +17,7 @@
 		paper-card {
 			margin-bottom: 13px;
 			height:240px;
-			min-width: 500px; 
+			min-width: 500px;
 			--border-top:2px solid teal !important;
 			border:1px solid teal;
 			
@@ -35,17 +35,6 @@
 			--max-width:200px;
 			font-size:12px;
 			--min-width: 75px;
-		}
-
-		.metric1 {
-			margin-right: 10px;
-			margin-left:10px;
-			margin-top: 20px;
-			margin-bottom: 5px;
-			--width:200px;
-			font-size:12px;
-			max-width: 200px;
-			--min-width:50px;
 		}
 
 		paper-card p{
@@ -67,29 +56,7 @@
 	 	#content :hover{
 			--color:teal;
 			--z-index:20;
-		}
-
-		.detail {
-			margin:10px;
-			--margin-bottom:0px !important;
-			--height:250px;
-			width:50%;
-		}	
-
-		.detailmetric {
-			--border:1px solid teal;
-			height:73px;
-			--border-bottom:1px solid teal;
-			--border-right:1px solid teal;
-
-		}
-
-		.detailmetric span{
-			vertical-align: center;
-			text-align: center;
-			margin-top:15px;
-
-		}
+		}		
 
 		.mdcontainer {
 			margin-left:10px;
@@ -99,13 +66,6 @@
 			height:100px;
 		}
 	
-		#detail-header {
-			margin-bottom: 20px;
-			margin-top:10px;
-			margin-left:10px;
-			font-weight: bold;
-		}
-
 		aq-backtest-metric-item {
 			margin-top: 8px;
 			--margin-bottom: 15px;
@@ -123,11 +83,6 @@
 			border-bottom:1px solid teal;
 		}
 
-		.metric {
-			--min-width: 120px;
-			margin-right: 15px;
-		}
-
 		.bold-span {
 			--font-weight: bold;
 			--font-size: 14px;
@@ -141,6 +96,10 @@
 			color:teal;
 		}
 
+		p strong {
+			font-size:20px;
+		}
+
 
 	</style>
 
@@ -149,7 +108,7 @@
 			<div id='content' class="card-content flex">
 				<div  class="container-int layout horizontal">
 					<paper-checkbox noink id='checkbox' on-tap = 'onCheck'></paper-checkbox>	
-					<p>Backtest: 1</p>
+					<p>Backtest: <strong>[[formatIndex(index)]]</strong></p>
 					<div class="flex"></div>
 		          	<paper-icon-button  title="Detail" on-tap="onDetail" icon="vaadin-icons:chart"></paper-icon-button>
 		          	<paper-icon-button class="icons" title="Share" on-tap="onShare" icon="vaadin-icons:share-square"></paper-icon-button>
@@ -158,18 +117,18 @@
 
 				<div class=" container-int layout horizontal">
 					<div class="layout vertical metric">	
-						<span class="bold-span">01/01/2010 - 01/01/2016</span>
+						<span class="bold-span">[[backtest.startDate]] - [[backtest.endDate]]</span>
 						<span>Date Range</span>		
 					</div>
 
 					
 					<div class="layout vertical metric flex">	
-						<span class="bold-span">08/07/2016</span>
+						<span class="bold-span">[[backtest.createdAt]]</span>
 						<span>Created</span>					
 					</div>	
 
 					<div class="layout vertical metric flex">	
-						<span class="bold-span">Complete</span>
+						<span class="bold-span">[[backtest.status]]</span>
 						<span>Status</span>		
 					</div>
 
@@ -183,7 +142,14 @@
 
 			<div class="card-actions">
 				<div class="self-center wrap flex_container layout horizontal">
-					<aq-backtest-metric-item class="flex width_tab" metric-name="Sharpe Ratio"
+
+					<template is='dom-repeat' items="{{backtest.metrics1}}">
+						<aq-backtest-metric-item class="flex width_tab" 	metric-name="[[item.metricName]]" 
+							metric-value="[[item.metricValue]]"
+							metric-desc="[[item.metricDesc]]">
+						</aq-backtest-metric-item>
+					</template>
+					<!--aq-backtest-metric-item class="flex width_tab" metric-name="Sharpe Ratio"
 						metric-value="2.47"
 						metric-desc="Sharpe ratio of the strategy">
 					</aq-backtest-metric-item>
@@ -201,12 +167,18 @@
 					<aq-backtest-metric-item class="flex width_tab" metric-name="Sharpe Ratio"
 						metric-value="2.47"
 						metric-desc="Sharpe ratio of the strategy">
-					</aq-backtest-metric-item>
+					</aq-backtest-metric-item-->
 							
 				</div>
 
 				<div class="self-center wrap flex_container layout horizontal">
-					<aq-backtest-metric-item class="flex width_tab" metric-name="Sharpe Ratio"
+					<template is='dom-repeat' items="{{backtest.metrics2}}">
+						<aq-backtest-metric-item class="flex width_tab" 	metric-name="[[item.metricName]]" 
+							metric-value="[[item.metricValue]]"
+							metric-desc="[[item.metricDesc]]">
+						</aq-backtest-metric-item>
+					</template>
+					<!--aq-backtest-metric-item class="flex width_tab" metric-name="Sharpe Ratio"
 						metric-value="2.47"
 						metric-desc="Sharpe ratio of the strategy">
 					</aq-backtest-metric-item>
@@ -224,7 +196,7 @@
 					<aq-backtest-metric-item class="flex width_tab" metric-name="Sharpe Ratio"
 						metric-value="2.47"
 						metric-desc="Sharpe ratio of the strategy">
-					</aq-backtest-metric-item>
+					</aq-backtest-metric-item-->
 									
 				</div>
 
@@ -237,47 +209,6 @@
 			is:'aq-analyze-home-backtest-item2',
 			
 			properties:{
-				lineData: {
-					type:Object,
-					value: {
-					  labels: ["January", "February", "March", "April", "May", "June", "July","January", "February", "March", "April", "May", "June", "July","January", "February", "March", "April", "May", "June", "July","January", "February", "March", "April", "May", "June", "July","January", "February", "March", "April", "May", "June", "July","January", "February", "March", "April", "May", "June", "July","January", "February", "March", "April", "May", "June", "July","January", "February", "March", "April", "May", "June", "July","January", "February", "March", "April", "May", "June", "July","January", "February", "March", "April", "May", "June", "July","January", "February", "March", "April", "May", "June", "July","January", "February", "March", "April", "May", "June", "July"],
-					  datasets: [
-					    {
-					      label: "Strategy",
-					      //backgroundColor: "red",
-					      borderColor: "red",// "rgba(220,220,220,1)",
-					      borderWidth: 1,
-					      lineTension:0,
-					      pointRadius:1,
-					      //pointBackgroundColor: "rgba(220,220,220,1)",
-					      //pointBorderColor: "#fff",
-					      //pointHoverBackgroundColor: "#fff",
-					      //pointHoverBorderColor: "rgba(220,220,220,1)",
-					      data: [65, 59, 80, 81, 56, 55, 40,65, 59, 80, 81, 56, 55, 40,65, 59, 80, 81, 56, 55, 40,65, 59, 80, 81, 56, 55, 40,65, 59, 80, 81, 56, 55, 40,65, 59, 80, 81, 56, 55, 40,65, 59, 80, 81, 56, 55, 40,65, 59, 80, 81, 56, 55, 40,65, 59, 80, 81, 56, 55, 40,65, 59, 80, 81, 56, 55, 40,65, 59, 80, 81, 56, 55, 40,65, 59, 80, 81, 56, 55, 40]
-					    }]
-					}, 
-				},
-
-				barData: {
-					type:Object,
-					value: {
-					  labels: ["January", "February", "March", "April", "May", "June", "July","January", "February", "March", "April", "May", "June", "July","January", "February", "March", "April", "May", "June", "July","January", "February", "March", "April", "May", "June", "July","January", "February", "March", "April", "May", "June", "July","January", "February", "March", "April", "May", "June", "July"],
-					  datasets: [
-					    {
-					      label: "Strategy",
-					      //backgroundColor: "red",
-					      borderColor: "red",// "rgba(220,220,220,1)",
-					      borderWidth: 1,
-					      lineTension:0,
-					      //pointBackgroundColor: "rgba(220,220,220,1)",
-					      //pointBorderColor: "#fff",
-					      //pointHoverBackgroundColor: "#fff",
-					      //pointHoverBorderColor: "rgba(220,220,220,1)",
-					      data: [-65, -59, 80, 81, 56, 55, -40,65, 59, -80, 81, 56, 55, 40,-65, 59, 80, 81, -56, 55, 40,-65, 59, 80, 81, 56, -55, 40,65, -59, 80, 81, 56, 55, 40,65, -59, 80, 81, -56, 55, 40]
-					    }]
-					}, 
-				},
-
 				backtest: {
 					type:Object,
 				},
@@ -287,6 +218,127 @@
 					value:false,
 				},
 
+				index: String,
+
+			},
+
+			ready: function() {
+
+				this.set('backtest.metrics1',[{
+				            		"metricName":"Total Return", 
+				            		"metricValue":"-", 
+				            		"metricDescription":"Total Return"
+				            	},
+								{
+									"metricName":"Annual Return",
+									"metricValue":"-",
+									"metricDescription":"Annual Return",
+								},
+								{
+									"metricName":"Volatility",
+								 	"metricValue":"-", 
+								 	"metricDescription":"Volatility"
+								},
+								{
+									"metricName":"Sharpe Ratio", 
+									"metricValue":"-",
+									"metricDescription":"Sharpe Ratio"
+								}]);
+								
+				this.set('backtest.metrics2', [{	
+									"metricName":"Sortino Ratio",
+									"metricValue":"-",
+									"metricDescription":"Sortino Ratio"
+								},
+								{
+									"metricName":"Max Drawdown",
+								 	"metricValue":"-",
+							 	 	"metricDescription":"Max Drawdown"
+						 	 	},
+								{	
+									"metricName":"Calmar Ratio",
+								 	"metricValue":"-",
+							 	 	"metricDescription":"Calmar Ratio"
+						 	 	},
+								/*{
+									"metricName":"Beta",
+								 	"metricValue":"-",
+							 	 	"metricDescription":"Beta"
+						 	 	},*/
+								{
+									"metricName":"Stability",
+								 	"metricValue":"-",
+							 	 	"metricDescription":"Stability"
+						 	 	},
+								/*{
+									"metricName":"Avg. Concentration", 
+									"metricValue":"-",
+								 	"metricDescription":"Avg. Concentration"
+							 	},*/]);
+				this.processBacktestData();
+
+
+			},
+
+			formatIndex: function(index) {
+				return index + 1;
+			},
+
+			processBacktestData: function() {
+				var metricsArray1 = [];
+				var metricsArray2 = [];
+
+				var data = this.backtest.output.summary;
+
+				this.set('backtest.metrics1' ,[{
+				            		"metricName":"Total Return", 
+				            		"metricValue":data.totalreturn.toFixed(2).toString()+'%', 
+				            		"metricDescription":"Total Return"
+				            	},
+								{
+									"metricName":"Annual Return",
+									"metricValue":data.annualreturn.toFixed(2).toString()+'%',
+									"metricDescription":"Annual Return",
+								},
+							{"metricName":"Volatility", "metricValue":data.annualstandarddeviation.toFixed(2).toString()+'%', "metricDescription":"Volatility"},
+							{"metricName":"Sharpe Ratio", "metricValue":data.sharperatio.toFixed(2), "metricDescription":"Sharpe Ratio"},]);
+				this.set('backtest.metrics2', [ 
+								{"metricName":"Sortino Ratio", "metricValue":"2.5", "metricDescription":"Sortino Ratio"},
+								{"metricName":"Max Drawdown", "metricValue":data.maxdrawdown.toFixed(2).toString()+'%', "metricDescription":"Max Drawdown"},
+								{"metricName":"Calmar Ratio", "metricValue":"4.3", "metricDescription":"Calmar Ratio"},
+								{"metricName":"Stability", "metricValue":"0.88", "metricDescription":"Stability"}]);
+								
+
+				//this.set('metrics1', metricsArray1);
+				//this.set('metrics2', metricsArray2);
+
+				this.set('backtest.startDate',this.formatDate(this.backtest.settings.start));
+				this.set('backtest.endDate',this.formatDate(this.backtest.settings.end));
+				this.set('backtest.status', this.backtest.status.charAt(0).toUpperCase() + this.backtest.status.slice(1));
+				this.set('backtest.createdAt',this.formatDate(this.backtest.createdAt));
+			},
+
+			formatDate: function(date) {
+				var today = new Date(date);
+				today.setDate(today.getDate());
+				var dd = today.getDate();
+				var mm = today.getMonth()+1; //January is 0!
+				var yyyy = today.getFullYear();
+
+				if(dd<10) {
+				    dd='0'+dd
+				} 
+
+				if(mm<10) {
+				    mm='0'+mm
+				} 
+
+				today = dd+'/'+mm+'/'+yyyy;
+				return today;
+			},
+
+			isBacktestActive: function(backtest) {
+				return false;
 			},
 
 			onCheck: function() {
