--- a/src/components/analyze/aq-analyze-home.html
+++ b/src/components/analyze/aq-analyze-home.html
@@ -15,30 +15,11 @@
   
 	<style>
 		
-		.metric {
-			margin-right: 10px;
-			margin-left:10px;
-			margin-top: 20px;
-			margin-bottom: 5px;
-			width:150px;
-		}
-
-		.metric1 {
-			margin-right: 10px;
-			margin-left:10px;
-			margin-top: 20px;
-			margin-bottom: 5px;
-			width:100px;
-			font-size:12px;
-		}
-
 		#container {
 			width:95%;
 			margin:0 auto;
-		    --margin-left: 30px;
-		    --margin-right: 30px;
 		    margin-top: 0px;
-		    color: #333a56; 
+		    color: #24293d; 
 		  }
 
 	  	#dialog{
@@ -60,7 +41,6 @@
 			height:0px;
 			min-width: 500px; 		
 		}
-
 
 	</style>
 
@@ -102,9 +82,9 @@
 				<aq-analyze-home-menu num-active-backtests="[[checkedCount]]" strategy-name="{{strategyName}}"></aq-analyze-home-menu>
 
 				<p>All Backtests for <i>{{strategyName}}</i></p>
-				<div class="layout horizontal wrap flex around-justified">
-				<template is='dom-repeat' items="{{backtests}}">
-					<aq-analyze-home-backtest-item2 backtest="{{item}}"></aq-analyze-home-backtest-item2>
+				<div class="layout horizontal wrap flex around-justified itemcontainer" >
+				<template is='dom-repeat' items="{{backtests}}" initial-count=10>
+					<aq-analyze-home-backtest-item2 index="{{index}}"" backtest="{{item}}"></aq-analyze-home-backtest-item2>
 				</template>
 				<template is='dom-if' if='[[isBacktestCountOdd(backtests)]]'>
 					<div class="spacer"></div>
@@ -113,7 +93,7 @@
 			</template>
 
 			<template is='dom-if' if="[[showComparison]]">
-				<aq-analyze-backtest-comparison-item>
+				<aq-analyze-backtest-comparison-item compare-items="[[checkedItems]]" active="[[showComparison]]">
 				</aq-analyze-backtest-comparison-item>
 			</template>
 
@@ -138,7 +118,7 @@
     			strategyId: String,
 
     			backtests: {
-    				type:Object,
+    				type:Array,
        			},
 
        			backtestId:String,
@@ -213,6 +193,7 @@
 			},
 			
 			onGetAllBacktestsForStrategy: function(data) {
+				console.log(data.detail.response);
 				this.backtests = data.detail.response;
 			},
 
