Bug Fix: Was unable to click on strategy name and access code editor (because floating action menu was removed)

--- a/src/components/editor/aq-editor-home-strategy-item.html
+++ b/src/components/editor/aq-editor-home-strategy-item.html
@@ -119,7 +119,7 @@
 			},
 
 			goToEditor: function() {
-				this.fire('editorClicked');//, {id:this.strategyId});
+				this.fire('editorClicked', {id:this.strategyId});
 			},
 
 			goToAnalyze: function() {
