--- a/src/components/editor/aq-editor-home-strategy-item.html
+++ b/src/components/editor/aq-editor-home-strategy-item.html
@@ -22,7 +22,7 @@
 	        --border-bottom: 1px solid #e5e5e5;
 	        border: 1px solid #9ecbda;
 	        border-top: none;
-	        background-color: #e5f1f5;
+	        background-color: white;--#e5f1f5;
 	        color:#24293d;--#02558b;
 	      }
 
@@ -82,7 +82,7 @@
 
 
 	    .row:hover {
-	    	background:#bbdae5;
+	    	background:#e3f6ed;--#bbdae5;
 	    }
 
 	    
