--- a/src/components/editor/aq-editor-home.html
+++ b/src/components/editor/aq-editor-home.html
@@ -27,7 +27,7 @@
         line-height: 56px;
         font-size: 18px;
         font-weight: bold;
-        background-color:#9ecbda;--#90c3d4;--#acd2df;
+        background-color:#e3f6ed;--#9ecbda;--#90c3d4;--#acd2df;
         min-width:640px;
 
       }
