--- a/src/components/editor/aq-editor-sidebar-run.html
+++ b/src/components/editor/aq-editor-sidebar-run.html
@@ -48,8 +48,8 @@
 		  @apply(--paper-font-body1);
 		  font-size: 14px;
 		  border-radius: 5px;
-		  border:1px solid #c9e4e9;--#f3f9fa;
-		  color:#02558b;
+		  border:1px solid #cbefde;--#c9e4e9;--#f3f9fa;
+		  color:#24293d;--#02558b;
 		}
 
 		#box {
@@ -59,7 +59,7 @@
 		input :focus {
 		  outline: 0;
 		  background-color: #eceff1;
-		  border-color: #cfd8dc;
+		  border-color: #cbefde;--#cfd8dc;
 		}
 
 		
@@ -137,11 +137,15 @@
 		  	color:#02558b;
 		}
 
+		textarea:focus{
+			border-color: #cbefde;
+		}
+
 		aq-dropdown {
 			--dropdown-height:27px;
 			--dropdown-width:140px;
 			margin-top: -13px;
-			--dropdown-background-color:#c9e4e9;--#f3f9fa;
+			--dropdown-background-color:#cbefde; --#c9e4e9;--#f3f9fa;
 		}
 
 		.smallInputBox {
@@ -158,7 +162,7 @@
 
 		#run {
 			z-index: 1002;
-			color:#02558b;
+			color:#24293d;-#02558b;
 		}
 
 	</style>
