--- a/src/components/editor/aq-editor-toolbar.html
+++ b/src/components/editor/aq-editor-toolbar.html
@@ -28,7 +28,7 @@
 		  --paper-toolbar-height:40px;
 		  --paper-toolbar-width:100px;
 		  --paper-toolbar-color:teal;
-  		  --paper-toolbar-background:#e5f1f5;
+  		  --paper-toolbar-background:#e3f6ed;--#e5f1f5;
   		  --border-right: 5px solid #24293d;
 		}
 
@@ -53,6 +53,7 @@
 			min-width: 150px;
 			--width:20%;
 			--font-size: 15px;
+			color:#24293d;
 		}
 
 		.toolbarIcon:active {
