--- a/src/components/aq-sidebar.html
+++ b/src/components/aq-sidebar.html
@@ -22,7 +22,7 @@
 
     #content {
        border-right: 1px solid #e0e0e0;--#5f6ca0;--#24293d;--#9ecbda;--#e5e5e5; 
-       background-color: #f4f9fb;--#e5f1f5;
+       background-color: #f2fbf7;--#f4f9fb;--#e5f1f5;
     }
 
 
@@ -32,13 +32,13 @@
         margin-left: 0px !important;
       };
       --paper-toolbar-background: #24293d;
-      border-bottom: 5px solid #cf6766;
+      border-bottom: 3px solid #cf6766;
       height:70px;
     }
    
     paper-menu {
       padding-bottom: 0;
-      background-color: #f4f9fb;--#e5f1f5;
+      background-color: #f2fbf7;--#f4f9fb;--#e5f1f5;
       opacity: var(--dark-primary-opacity);
 
       --paper-menu-focused-item-after :{
@@ -47,7 +47,7 @@
 
       --paper-menu-selected-item: {
         --text-decoration: underline;
-        background-color: #f4f9fb;
+        background-color: #e3f6ed;--#f4f9fb;
         border: 1px solid #e24e42;;
       }
 
@@ -62,11 +62,15 @@
      --iron-icon-width:20px;
      --iron-icon-height:20px;
      --color:#24293d;
-     color:#cf6766 !important;
+     color:#c3403f !important;
    }
 
    paper-icon-item {
     height:5px;
+   }
+
+   .menu{
+      font-size: 14px !important;
    }
 
  
@@ -87,7 +91,7 @@
 
     paper-icon-item {
       --paper-item-focused-before:{
-        background-color:white; 
+        --background-color:white; 
       }
       
     }
@@ -136,11 +140,11 @@
         <paper-menu fallback-selection="home" 
                     selected="{{menuSelected}}" 
                     attr-for-selected="menu-panel">
-          <paper-icon-item id='menu-home' menu-panel="home" on-tap="onSelected" active="{{_isEqual(menuSelected, 'home')}}">Home
+          <paper-icon-item id='menu-home' class="menu" menu-panel="home" on-tap="onSelected" active="{{_isEqual(menuSelected, 'home')}}">Home
             <iron-icon id="homeIcon" item-icon icon="aq-icons:home"></iron-icon>
           </paper-icon-item>
 
-          <paper-icon-item id='menu-editor' menu-panel="editor" on-tap="onSelected" active="{{_isEqual(menuSelected, 'editor')}}">Strategy Builder
+          <paper-icon-item id='menu-editor' class="menu" menu-panel="editor" on-tap="onSelected" active="{{_isEqual(menuSelected, 'editor')}}">Strategy Builder
             <iron-icon id="editorIcon" item-icon icon="vaadin-icons:twin-col-select"></iron-icon>
           </paper-icon-item>
 
@@ -148,11 +152,11 @@
             <iron-icon item-icon icon="aq-icons:chart"></iron-icon>
           </paper-icon-item-->
           
-          <paper-icon-item menu-panel="community" on-tap="onSelected" active="{{_isEqual(menuSelected, 'community')}}">Community
+          <paper-icon-item menu-panel="community" class="menu" on-tap="onSelected" active="{{_isEqual(menuSelected, 'community')}}">Community
             <iron-icon id="communityIcon" item-icon icon="vaadin-icons:group"></iron-icon>
           </paper-icon-item>
    
-          <paper-icon-item menu-panel="help" on-tap="onSelected" active="{{_isEqual(menuSelected,'help')}}">Help
+          <paper-icon-item menu-panel="help" class="menu" on-tap="onSelected" active="{{_isEqual(menuSelected,'help')}}">Help
             <iron-icon id="helpIcon" item-icon icon="vaadin-icons:book"></iron-icon>
           </paper-icon-item>
         </paper-menu>
