--- a/src/components/common/aq-backtest-detail-item.html
+++ b/src/components/common/aq-backtest-detail-item.html
@@ -93,6 +93,8 @@
 				--height:100%;
 				margin-bottom:10px;
 			};
+
+			margin-right:10px;
 		}
 
 	</style>
@@ -103,17 +105,15 @@
 				<div id='detail-header' class="layout horizontal">
 					<span class="self-center">Equity Curve</span>
 					<div class="flex"></div>	
-					<div class="toggle_tab">
-						<div>
-							<paper-tabs noink selected="{{graphType}}">
-								<paper-tab>Cum. Return</paper-tab>
-								<template is='dom-if' if='[[!active]]'>
-									<!--paper-tab>Net Value</paper-tab-->
-									<paper-tab>Monthly Returns</paper-tab>
-								</template>
-							</paper-tabs>
-						</div>
-					</div>
+					
+					<paper-tabs noink selected="{{graphType}}">
+						<paper-tab>Cum. Return</paper-tab>
+						<template is='dom-if' if='[[!active]]'>
+							<!--paper-tab>Net Value</paper-tab-->
+							<paper-tab>Monthly Returns</paper-tab>
+						</template>
+					</paper-tabs>
+						
 				</div>
 				
 				<iron-pages selected="{{graphType}}">
@@ -426,7 +426,7 @@
 	
 					this.cumRetData = [{
 					  "key":"Total Return (%)",
-					  "color": "#0375b4",
+					  "color": "#c3403f",
 					  "values": [linepoint]}];
 
 					this.minLineData = linepoint.y;
@@ -504,7 +504,7 @@
 				var yAxisLabel = this.getYAxisLabel(max);
 				
 	  			this.push('netValueData', {"key":yAxisLabel,
-				  				"color": "#0375b4",
+				  				"color": "#c3403f",
 					  			"values":linePoints});
 
 	  			
@@ -576,7 +576,7 @@
 				var yAxisLabel = "Total Return (%)";
 				
 	  			this.push('cumRetData',{"key":yAxisLabel,
-				  					"color": "#0375b4",
+				  					"color": "#c3403f",
 					  				"values":linePoints});
 
 
@@ -613,7 +613,7 @@
 				}
 
 				this.push('barData', {"key":"Monthly Returns (%)",
-				  				"color": "#0375b4",
+				  				"color": "#c3403f",//"#0375b4",
 					  			"values":barPoints}); 
 
 
