--- a/src/components/editor/aq-editor-edit.html
+++ b/src/components/editor/aq-editor-edit.html
@@ -41,7 +41,7 @@
   paper-toolbar {
       --paper-toolbar-height:40px;
       --paper-toolbar-color:#24293d;
-      --paper-toolbar-background:#9ecbda;--#c9e2ea;
+      --paper-toolbar-background:#cbefde;--#9ecbda;--#c9e2ea;
        border-bottom: 1px solid #24293d;
   }
 
@@ -60,11 +60,11 @@
   }
 
   #leftPanel {
-    border-right: 5px solid #24293d;
+    border-right: 1px solid #24293d;
   }
 
   #rightPanel {
-    background-color:#f3f9fa;--#f3f4f8;
+    background-color:#f2fbf7;--#f3f9fa;--#f3f4f8;
     border-left: 5px solid #24293d;
     color:#02558b;
   }
