--- a/src/layouts/aq-dashboard-main.html
+++ b/src/layouts/aq-dashboard-main.html
@@ -42,7 +42,7 @@
       overflow: auto;
       -webkit-overflow-scrolling: touch;
       --height:100%;
-      background-color:#f4f9fb;--#f2f8fa;--#eff6f9;
+      background-color:#f4f9f7;--#f5f8f7;--#f3faf7;--#f4f9fb;--#f2f8fa;--#eff6f9;
     }
 
   </style>
